<?xml version="1.0"?>
<package format="2">
  <name>pid_controller</name>
  <version>0.0.0</version>
  <description>The pid_controller package</description>

  <maintainer email="lxuser@todo.todo">lxuser</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <cpp>
      <include>include/pid_controller</include>
    </cpp>
  </export>
</package>
